syntax = "proto3";

package hybsterxpb;

import "gogoproto/gogo.proto";
import "pkg/command/commandpb/command.proto";

option go_package = "github.com/ibalajiarun/go-consensus/protocols/hybsterx/hybsterxpb";

message HybsterxMessage {
    oneof type {
        NormalMessage normal = 1;
        ONormalMessage oNormal = 2;
    }
}

message InstanceID {
    uint64 peer_id   = 1 [(gogoproto.customname) = "PeerID",
                            (gogoproto.casttype) = "github.com/ibalajiarun/go-consensus/peer/peerpb.PeerID"];
    uint64 index = 2 [(gogoproto.casttype) = "Index"];
}

message InstanceState {
    uint64 view = 1 [(gogoproto.casttype) = "View"];

    InstanceID instance_id = 2 [(gogoproto.customname) = "InstanceID",
                               (gogoproto.nullable) = false];

    enum Status {
        None = 0;
        Prepared = 1;
        Committed = 2;
        Executed = 3;
    }
    Status status = 3;

    commandpb.Command command = 4;
    bytes command_hash = 5;
}

message NormalMessage {
    uint64 view = 1 [(gogoproto.casttype) = "View"];

    InstanceID instance_id = 2 [(gogoproto.customname) = "InstanceID",
                               (gogoproto.nullable) = false];

    enum Type {
        None = 0;
        Prepare = 1;
        Commit = 3;
    }
    Type type = 3;

    commandpb.Command command = 4;
    bytes command_hash = 5;
}

message OInstanceState {
    uint64 view = 1 [(gogoproto.casttype) = "View"];

    uint64 index = 2 [(gogoproto.casttype) = "Index"];

    enum Status {
        None = 0;
        Prepared = 1;
        Committed = 2;
        Executed = 3;
    }
    Status status = 3;

    repeated InstanceID instances   = 4 [(gogoproto.nullable) = false];
    bytes command_hash = 5;
}

message ONormalMessage {
    uint64 view = 1 [(gogoproto.casttype) = "View"];

    uint64 index = 2 [(gogoproto.casttype) = "Index"];

    enum Type {
        None = 0;
        OPrepare = 1;
        OCommit = 2;
    }
    Type type = 3;

    repeated InstanceID instances   = 4 [(gogoproto.nullable) = false];
    bytes command_hash = 5;
}